src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm21_tket.qsystem.helios.LazyMeasureReset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { ptr, i1 } @_hl.main.1(ptr %0) !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca i1, align 1
  %"2_0" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %1 = call ptr @__QIR__CONV_Qubit_TO_Result(ptr %"2_01"), !dbg !11
  call void @__quantum__qis__mz__body(ptr %"2_01", ptr %1), !dbg !11
  call void @__quantum__qis__reset__body(ptr %"2_01"), !dbg !11
  %2 = call i1 @__quantum__rt__read_result(ptr %1), !dbg !11
  %3 = select i1 %2, i1 true, i1 false, !dbg !11
  store ptr %"2_01", ptr %"4_0", align 8, !dbg !11
  store i1 %3, ptr %"4_1", align 1, !dbg !11
  %"4_02" = load ptr, ptr %"4_0", align 8
  %"4_13" = load i1, ptr %"4_1", align 1
  store ptr %"4_02", ptr %"0", align 8
  store i1 %"4_13", ptr %"1", align 1
  %"04" = load ptr, ptr %"0", align 8
  %"15" = load i1, ptr %"1", align 1
  %mrv = insertvalue { ptr, i1 } poison, ptr %"04", 0
  %mrv6 = insertvalue { ptr, i1 } %mrv, i1 %"15", 1
  ret { ptr, i1 } %mrv6
}

declare ptr @__QIR__CONV_Qubit_TO_Result(ptr)

declare void @__quantum__qis__mz__body(ptr, ptr writeonly) #0

declare void @__quantum__qis__reset__body(ptr)

declare i1 @__quantum__rt__read_result(ptr readonly)

attributes #0 = { "irreversible" }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ ptr, i1 }", file: !2, size: 64, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!10 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!11 = !DILocation(line: 27062, column: 402, scope: !3)
