src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm21_tket.qsystem.helios.Reset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define ptr @_hl.main.1(ptr %0) !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"2_0" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  call void @__quantum__qis__reset__body(ptr %"2_01"), !dbg !8
  store ptr %"2_01", ptr %"4_0", align 8, !dbg !8
  %"4_02" = load ptr, ptr %"4_0", align 8
  store ptr %"4_02", ptr %"0", align 8
  %"03" = load ptr, ptr %"0", align 8
  ret ptr %"03"
}

declare void @__quantum__qis__reset__body(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7}
!7 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
