src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm21_tket.qsystem.helios.TryQAlloc.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i1, ptr } @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca { i1, ptr }, align 8
  %"4_0" = alloca { i1, ptr }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @__quantum__rt__qubit_allocate(), !dbg !11
  %1 = insertvalue { i1, ptr } { i1 true, ptr poison }, ptr %0, 1, !dbg !11
  store { i1, ptr } %1, ptr %"4_0", align 8, !dbg !11
  %"4_01" = load { i1, ptr }, ptr %"4_0", align 8
  store { i1, ptr } %"4_01", ptr %"0", align 8
  %"02" = load { i1, ptr }, ptr %"0", align 8
  ret { i1, ptr } %"02"
}

declare ptr @__quantum__rt__qubit_allocate()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, ptr }", file: !2, size: 64, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!11 = !DILocation(line: 27062, column: 402, scope: !3)
