src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm21_tket.qsystem.helios.ZZPhase.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { ptr, ptr } @_hl.main.1(ptr %0, ptr %1, double %2) !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca ptr, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca ptr, align 8
  %"2_2" = alloca double, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store ptr %1, ptr %"2_1", align 8
  store double %2, ptr %"2_2", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load ptr, ptr %"2_1", align 8
  %"2_23" = load double, ptr %"2_2", align 8
  call void @__quantum__qis__rzz__body(double %"2_23", ptr %"2_01", ptr %"2_12"), !dbg !11
  store ptr %"2_01", ptr %"4_0", align 8, !dbg !11
  store ptr %"2_12", ptr %"4_1", align 8, !dbg !11
  %"4_04" = load ptr, ptr %"4_0", align 8
  %"4_15" = load ptr, ptr %"4_1", align 8
  store ptr %"4_04", ptr %"0", align 8
  store ptr %"4_15", ptr %"1", align 8
  %"06" = load ptr, ptr %"0", align 8
  %"17" = load ptr, ptr %"1", align 8
  %mrv = insertvalue { ptr, ptr } poison, ptr %"06", 0
  %mrv8 = insertvalue { ptr, ptr } %mrv, ptr %"17", 1
  ret { ptr, ptr } %mrv8
}

declare void @__quantum__qis__rzz__body(double, ptr, ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !9, !10}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ ptr, ptr }", file: !2, size: 128, align: 8, elements: !8)
!8 = !{!9, !9}
!9 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!10 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!11 = !DILocation(line: 27062, column: 402, scope: !3)
